@@ -378,3 +378,8 @@ So I think that kspread should be the best spread on linux :).
 2000-04-09 -Montel laurent <montell@club-internet.fr>
 -----------------------------------------------------
 -Add Improved "insert formula"
+
+2000-04-10 -David Faure <faure@kde.org>
+---------------------------------------
+-Save and restore active table and cell
+
